<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.guide.GuideFragment">
    
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/toolbar"
        app:navigationIcon="@drawable/icon_arrow_back"/>
    
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_48dp"
            android:paddingHorizontal="@dimen/_20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_20dp">
                <TextView android:text="1."
                    style="@style/list_number"/>
                <TextView
                    android:text="@string/sudoku_rules_1"
                    style="@style/list_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_20dp">
                <TextView android:text="2."
                    style="@style/list_number"/>
                <TextView android:text="@string/sudoku_rules_2"
                    style="@style/list_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_20dp">
                <TextView android:text="3."
                    style="@style/list_number"/>
                <TextView android:text="@string/sudoku_rules_3"
                    style="@style/list_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_20dp">
                <TextView android:text="4."
                    style="@style/list_number"/>
                <TextView android:text="@string/sudoku_rules_4"
                    style="@style/list_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_20dp">
                <TextView android:text="5."
                    style="@style/list_number"/>
                <TextView android:text="@string/sudoku_rules_5"
                    style="@style/list_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_20dp">
                <TextView android:text="6."
                    style="@style/list_number"/>
                <TextView android:text="@string/sudoku_rules_6"
                    style="@style/list_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_20dp">
                <TextView android:text="7."
                    style="@style/list_number"/>
                <TextView android:text="@string/sudoku_rules_7"
                    style="@style/list_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_20dp">
                <TextView android:text="8."
                    style="@style/list_number"/>
                <TextView android:text="@string/sudoku_rules_8"
                    style="@style/list_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_20dp">
                <TextView android:text="9."
                    style="@style/list_number"/>
                <TextView android:text="@string/sudoku_rules_9"
                    style="@style/list_text"/>
            </LinearLayout>
        </LinearLayout>
        
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>