<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/difficulty_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_18dp"
        android:paddingVertical="@dimen/_20dp"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/decrement_difficulty_button"
            style="@style/levelControlButton"
            android:contentDescription="@string/decrement_level_button"
            android:src="@drawable/level_button_decrement" />

        <TextView
            android:id="@+id/difficulty_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/level"
            android:textSize="@dimen/_17sp"
            android:textColor="?attr/colorOnPrimaryVariant"/>

        <ImageButton
            android:id="@+id/increment_difficulty_button"
            style="@style/levelControlButton"
            android:contentDescription="@string/increment_level_button"
            android:src="@drawable/level_button_increment" />
    </LinearLayout>
</merge>