<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_48dp">

    <LinearLayout
        style="@style/dialog">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_20dp"
            android:orientation="vertical">
            <TextView
                android:text="@string/game_restart_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dialog_ok_button"
                android:text="@string/yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/buttonSolidSmall"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dialog_cancel_button"
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/buttonOutlineSmall"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>