<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.game.GameFragment">


    <LinearLayout
        android:id="@+id/head"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_16dp"
        android:paddingHorizontal="@dimen/_13dp"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/difficulty_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/_17sp"/>
        <TextView
            android:id="@+id/errors_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end">
            <Chronometer
                android:id="@+id/c_meter"
                android:background="@drawable/background_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_17sp"
                android:paddingVertical="@dimen/_3dp"
                android:paddingHorizontal="@dimen/_10dp"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/board"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/head"
        app:layout_constraintBottom_toTopOf="@+id/input_buttons"
        android:gravity="center">
        <com.mussayev.sudoku.ui.custom.SudokuBoardView
            android:id="@+id/sudokuBoardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/_10dp"
            app:cellImages="@array/cell_images"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/input_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/board"
        app:layout_constraintStart_toStartOf="@+id/board"
        app:layout_constraintEnd_toEndOf="@+id/board"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="@dimen/_20dp"
        android:paddingHorizontal="@dimen/_48dp">

        <LinearLayout
            android:id="@+id/inputs_1_5"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.mussayev.sudoku.ui.custom.SquareButton
                android:id="@+id/oneButton"
                android:text="@string/_1"
                style="@style/buttonInput"/>

            <com.mussayev.sudoku.ui.custom.SquareButton
                android:id="@+id/twoButton"
                android:text="@string/_2"
                style="@style/buttonInput"/>

            <com.mussayev.sudoku.ui.custom.SquareButton
                android:id="@+id/threeButton"
                android:text="@string/_3"
                style="@style/buttonInput"/>

            <com.mussayev.sudoku.ui.custom.SquareButton
                android:id="@+id/fourButton"
                android:text="@string/_4"
                style="@style/buttonInput"/>

            <com.mussayev.sudoku.ui.custom.SquareButton
                android:id="@+id/fiveButton"
                android:text="@string/_5"
                style="@style/buttonInput"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/inputs_1_6"
            app:layout_constraintTop_toBottomOf="@+id/inputs_1_5"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.mussayev.sudoku.ui.custom.SquareButton
                android:id="@+id/sixButton"
                android:text="@string/_6"
                style="@style/buttonInput"/>
            <com.mussayev.sudoku.ui.custom.SquareButton
                android:id="@+id/sevenButton"
                android:text="@string/_7"
                style="@style/buttonInput"/>
            <com.mussayev.sudoku.ui.custom.SquareButton
                android:id="@+id/eightButton"
                android:text="@string/_8"
                style="@style/buttonInput"/>
            <com.mussayev.sudoku.ui.custom.SquareButton
                android:id="@+id/nineButton"
                android:text="@string/_9"
                style="@style/buttonInput"/>
            <com.mussayev.sudoku.ui.custom.SquareButton
                android:id="@+id/clear_button"
                android:text="X"
                style="@style/buttonInput"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingVertical="@dimen/_38dp"
            android:paddingHorizontal="@dimen/_34dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/reset_button"
                    android:src="@drawable/icon_refresh"
                    style="@style/buttonControlIcon"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">
                <RelativeLayout
                    style="@style/buttonControlIcon"
                    android:padding="0dp">
                    <ImageButton
                        android:id="@+id/hint_text_view"
                        android:src="@drawable/icon_hint"
                        style="@style/buttonControlIcon"
                        android:background="@null"/>
                    <TextView
                        android:id="@+id/hints_text_view"
                        android:background="@drawable/background_circle_amount"
                        android:layout_width="@dimen/_16dp"
                        android:layout_height="@dimen/_16dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:paddingVertical="0dp"
                        android:gravity="center"
                        android:textColor="?attr/amountTextColor"
                        android:textSize="@dimen/_11sp"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/draft_button"
                    android:src="@drawable/icon_draft"
                    style="@style/buttonControlIcon"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>




















    <LinearLayout
        android:id="@+id/main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:background="@drawable/background_geme"
        android:visibility="gone">


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>