<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.endgame.EndgameFragment"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_32dp">
        <ImageView
            android:src="@drawable/icon_access_time"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            android:alpha="0.25"
            android:contentDescription="@string/icon_access_time"/>
        <Chronometer
            android:id="@+id/c_meter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_51sp"
            android:padding="@dimen/_20dp"/>
        <TextView
            android:id="@+id/difficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingVertical="@dimen/_34dp"
        android:paddingHorizontal="@dimen/_42dp"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/new_game_button"
            android:text="@string/new_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/buttonSolid"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/home_button"
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/buttonOutline"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>